--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -12,6 +12,7 @@
             <link rel="stylesheet" href="{{ asset('css/ie.css') }}" type="text/css" media="screen, projection">
         <![endif]-->
         <script type="text/javascript" src="{{ asset("components/jquery/jquery.min.js") }}"></script>
+        <script type="text/javascript" src="{{ asset("components/jquery/tooltip.js") }}"></script>
     </head>
     <body>
 
