--- a/src/Hyper/AdsBundle/Resources/public/css/main.css
+++ b/src/Hyper/AdsBundle/Resources/public/css/main.css
@@ -82,3 +82,12 @@ form div > ul {
     list-style: none;
     float: right;
 }
+
+#imgpreview{
+	position:absolute;
+	border:1px solid #ccc;
+	background:#333;
+	padding:5px;
+	display:none;
+	color:#fff;
+}
