--- a/src/Hyper/AdsBundle/Resources/views/Default/tutorial.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Default/tutorial.html.twig
@@ -29,7 +29,9 @@
 
 		<p>Przetestowanym przez nas sposobem zakupu jest <b>Bitcurex</b>, <a href="https://pln.bitcurex.com/">https://pln.bitcurex.com/</a> - jest to giełda walut, która wg. polskich użytkowników systemu bitcoin, działa sprawnie i szybko. Po założeniu konta, przelewasz tam odpowiednią kwotę przelewem bankowym w złotówkach, na ich konto w Mbanku, dane podane są pod adresem <a href="https://pln.bitcurex.com/zasilenie-konta">https://pln.bitcurex.com/zasilenie-konta</a> - poniżej przykładowy obrazek z zaznaczonym fragmentem ekranu.</p>
 
-		<img src="{{ asset('bundles/hyperads/images/bitxurex-dane-konta-do-wplat-pln.png') }}">
+		<a href="{{ asset('bundles/hyperads/images/bitxurex-dane-konta-do-wplat-pln.png') }}" class="imgpreview" title="Bitcurex">
+		<img src="{{ asset('bundles/hyperads/images/bitxurex-dane-konta-do-wplat-pln-M.png') }}">
+		</a>
 
 		<p>Wpłaty z kont w mBanku i MultiBanku są księgowane w ciągu kilku minut, reszta zgodnie z cyklem przelewów międzybankowych, a więc trzy razy dziennie w dni robocze. <b>Uwaga, należy dokładnie podać tytuł przelewu zgodnie ze spersonalizowanymi dla każdego konta, danymi w Bitcurex, gdyż transakcje księgowane są automatycznie na podstawie tego tytułu przelewu.</b> Bitcurex nie pobiera prowizji od wymiany walut, nie pobiera również prowizji od wpłat złotówkowych. Aby kupić BTC na giełdzie Bitcurex, nie trzeba okazywać dokumentów, jak na przykład jest to wymagane w Mt.Gox.</p>
 
