--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -8,11 +8,13 @@
         <link rel="stylesheet" type="text/css" href="{{ asset('css/screen.css') }}" media="screen,projection" />
         <link rel="stylesheet" type="text/css" href="{{ asset('css/print.css') }}" media="print" />
         <link rel="stylesheet" type="text/css" href="{{ asset('bundles/hyperads/css/main.css') }}" media="screen" />
+		<link href='http://fonts.googleapis.com/css?family=Headland+One&subset=latin-ext' rel='stylesheet' type='text/css'>
         <!--[if lt IE 8]>
             <link rel="stylesheet" href="{{ asset('css/ie.css') }}" type="text/css" media="screen, projection">
         <![endif]-->
-        <script type="text/javascript" src="{{ asset("components/jquery/jquery.min.js") }}"></script>
-        <script type="text/javascript" src="{{ asset("components/jquery/tooltip.js") }}"></script>
+        <script type="text/javascript" src="{{ asset('components/jquery/jquery.min.js') }}"></script>
+		<link rel="stylesheet" href="{{ asset('components/fancybox/source/jquery.fancybox.css') }}" type="text/css" media="screen" />
+        <script type="text/javascript" src="{{ asset('components/fancybox/source/jquery.fancybox.pack.js') }}"></script>
     </head>
     <body>
 
