--- a/src/Hyper/AdsBundle/Resources/views/Default/tutorial.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Default/tutorial.html.twig
@@ -57,11 +57,15 @@
 <table><tr><td>
 		<p>Jeśli jesteś nowym klientem, powinieneś zacząć od założenia konta. Kliknij w "Zarejestruj" - patrz obrazek obok.</p>
 </td><td>
-		<img src="{{ asset('bundles/hyperads/images/mak-zarejestruj.png') }}">
+		<a href="{{ asset('bundles/hyperads/images/mak-zarejestruj.png') }}" class="fancybox" title="">
+		<img src="{{ asset('bundles/hyperads/images/mak-zarejestruj-M.png') }}">
+		</a>
 </td></tr><tr><td>
 		<p>Wypełnij wszystkie rubryki jak na obrazku poniżej, pamiętając, że adres mailowy będzie musiał zostać zweryfikowany. Po otrzymaniu maila po prostu kliknij w link potwierdzający i konto zostanie aktywowane. Jeśli nie otrzymałeś maila w ciągu maksymalnie kilku minut, sprawdź folder z spamem, gdyż mail mógł tam przypadkiem wylądować. Gdybyś w ogóle nie otrzymał maila, skontaktuj się z nami.</p>
 </td><td>
-		<img src="{{ asset('bundles/hyperads/images/mak-rejestracja.png') }}">
+		<a href="{{ asset('bundles/hyperads/images/mak-rejestracja.png') }}" class="fancybox" title="">
+		<img src="{{ asset('bundles/hyperads/images/mak-rejestracja-M.png') }}">
+		</a>
 </td></tr></table>
 
 		<h3>Lista stref</h3>
@@ -69,11 +73,15 @@
 <table><tr><td>
 		<p>Po założeniu i aktywacji konta, zaloguj się do systemu. Po lewej stronie znajdziesz odnośnik "Informacje o strefach" - patrz obrazek obok.</p>
 </td><td>
-		<img src="{{ asset('bundles/hyperads/images/mak-strona-glowna-informacje-o-strefach.png') }}">
+		<a href="{{ asset('bundles/hyperads/images/mak-strona-glowna-informacje-o-strefach.png') }}" class="fancybox" title="">
+		<img src="{{ asset('bundles/hyperads/images/mak-strona-glowna-informacje-o-strefach-M.png') }}">
+		</a>
 </td></tr><tr><td>
 		<p>Gdy klikniesz w ten odnośnik, pokaże ci się lista wszystkich możliwych do zamieszczenia bannerów, wraz z cennikiem i ich maksymalnymi rozmiarami. Przeanalizuj naszą ofertę, i zdecyduj się na jeden lub kilka bannerów. Uwaga, poniższe ceny są jedynie przykładowe i nie stanowią oferty handlowej. Aktualne ceny znajdziesz po zalogowaniu się na swoje konto.</p>
 </td><td>
-		<img src="{{ asset('bundles/hyperads/images/mak-informacje-o-strefach.png') }}">
+		<a href="{{ asset('bundles/hyperads/images/mak-informacje-o-strefach.png') }}" class="fancybox" title="">
+		<img src="{{ asset('bundles/hyperads/images/mak-informacje-o-strefach-M.png') }}">
+		</a>
 </td></tr></table>
 
 		<p>Wszystkie bannery rotują się w strefie z innymi ogłoszeniodawcami, maksymalnie w stosunku 1:5 czyli twój banner będzie pojawiał się średnio masymalnie co pięć wyświetleń strony. Jeśli chcesz zająć określoną strefę wyłącznie dla siebie, musisz zatem przygotować pięć bannerów i opłacić je oddzielnie.<p>
@@ -86,69 +94,123 @@
 
 <table><tr><td>
 		<p>Kiedy masz już gotowy do publikacji banner, kliknij w odnośnik "Twoje bannery", a potem w "Dodaj banner". Wgraj banner do systemu zgodnie z przykładowym obrazkiem poniżej:</p>
-</td></td>
-		<img src="{{ asset('bundles/hyperads/images/mak-wgrywanie-bannera.png') }}">
+</td><td>
+		<a href="{{ asset('bundles/hyperads/images/mak-wgrywanie-bannera.png') }}" class="fancybox" title="">
+		<img src="{{ asset('bundles/hyperads/images/mak-wgrywanie-bannera-M.png') }}">
+		</a>
 </td></tr></table>
 
 		<p><i>Tytuł</i> to nazwa tego konkretnie bannera, abyś później wiedział, który banner jest który, jeśli posiadasz więcej bannerów. <i>Treść linku</i> jest istotna tylko wtedy, kiedy czytelnik hyperreala posługuje się jakąś starą przeglądarką tekstową, i w dzisiejszych czasach jest to mało realne, więc to, co tam wpiszesz, nie ma większego znaczenia. Natomiast bardzo ważne jest prawidłowe wypełnienie pola <i>URL</i> - bo tam własnie zostanie przeniesiony czytelnik w momencie, w którym kliknie w twój banner.</p>
 
-		<p>Po wgraniu bannera, kliknij w odnośnik "Moje bannery". Powinien pojawić się na liście banner, który właśnie wgrałeś, podobnie do obrazka poniżej:</p>
+<table><tr><td>
+		<p>Po wgraniu bannera, kliknij w odnośnik "Moje bannery". Powinien pojawić się na liście banner, który właśnie wgrałeś, podobnie do obrazka obok:</p>
 
-		<img src="{{ asset('bundles/hyperads/images/mak-twoje-bannery.png') }}">
+</td><td>
+		<a href="{{ asset('bundles/hyperads/images/mak-twoje-bannery.png') }}" class="fancybox" title="">
+		<img src="{{ asset('bundles/hyperads/images/mak-twoje-bannery-M.png') }}">
+		</a>
 
+</td></tr></table>
 		<p>Jesteś teraz w stanie aktywować banner w pasujących do niego strefach, możesz też sprawdzić listę poprzednich płatności za ten banner.</p>
 
 		<h3>Opłacenie bannera</h3>
 
+<table><tr><td>
 		<p>Na obrazku poniżej widać listę stref, w których możesz aktywować swój banner. Aby to uczynić, kliknij w odnośnik "Opłać banner w tej strefie"</p>
+</td><td>
 
-		<img src="{{ asset('bundles/hyperads/images/mak-strefy-dla-bannera.png') }}">
+		<a href="{{ asset('bundles/hyperads/images/mak-strefy-dla-bannera.png') }}" class="fancybox" title="">
+		<img src="{{ asset('bundles/hyperads/images/mak-strefy-dla-bannera-M.png') }}">
+		</a>
 
+</td></tr><tr><td>
 		<p>Wybierz teraz okres, przez jaki ma wyświetlać się banner, obok wyświetli ci się sumaryczna cena usługi. System też poinformuuje cię, jeśli nie będzie w stanie zabookować strefy na cały okres, ze względu na to, że jest w pełni zajęta.</p>
 
-		<img src="{{ asset('bundles/hyperads/images/mak-oplac-banner.png') }}">
+</td><td>
+		<a href="{{ asset('bundles/hyperads/images//mak-oplac-banner.png') }}" class="fancybox" title="">
+		<img src="{{ asset('bundles/hyperads/images/mak-oplac-banner-M.png') }}">
+		</a>
 
+</td></tr><tr><td>
 		<p>Zanim przejdziesz do transakcji, ustal swój adres zwrotny. Adres ten będzie użyty przez naszego pośrednika płatniczego, Mt.Gox, w dwóch wypadkach: a) gdybyś przelał więcej BTC niż wymaga to transakcja zakupu bannera, b) gdyby transakcja z rozmaitych powodów technicznych się nie powiodła. Dla przykładu, twój adres zwrotny w giełdzie Bitcurex, jest widoczny pod adresem <a href="https://pln.bitcurex.com/zasilenie-konta">https://pln.bitcurex.com/zasilenie-konta</a> - przykładowy adres jest widoczny na obrazku poniżej (oczywiście w swojej transakcji używaj własnego adresu, a nie przykładowego z obrazka!!):</p>
 
-		<img src="{{ asset('bundles/hyperads/images/bitcurex-adres-zwrotny.png') }}">
+</td><td>
+		<a href="{{ asset('bundles/hyperads/images/bitcurex-adres-zwrotny.png/') }}" class="fancybox" title="">
+		<img src="{{ asset('bundles/hyperads/images/bitcurex-adres-zwrotny-M.png') }}">
+		</a>
 
+</td></tr><tr><td>
 		<p>Po ustaleniu adresu zwrotnego, możemy kontynuować płatność. Z adresu mak.hyperreal.biz przenosimy się do systemu płatności Mt.Gox, który pośredniczy w transakcji. Ekran będzie teraz wyglądał podobnie do tego poniżej. Widzimy na nim również dokładną wartość bitcoinów, które należy zapłacić za reklamę. Wybierasz opcję, że nie masz konta w Mt.Gox (chyba, że akurat masz, wtedy możesz oczywiście go użyć do tej płatności).</p>
 
-		<img src="{{ asset('bundles/hyperads/images/mtgox-payment-initial-screen.png') }}">
+</td><td>
+		<a href="{{ asset('bundles/hyperads/images/mtgox-payment-initial-screen.png') }}" class="fancybox" title="">
+		<img src="{{ asset('bundles/hyperads/images/mtgox-payment-initial-screen-M.png') }}">
+		</a>
 
-		<p>Jako adres zwrotny wpisujemy ten adres, który poznaliśmy w poprzednim etapie, podobnie do obrazka poniżej:</p>
+</td></tr><tr><td>
+		<p>Jako adres zwrotny wpisujemy ten adres, który poznaliśmy w poprzednim etapie, podobnie do obrazka obok:</p>
 
-		<img src="{{ asset('bundles/hyperads/images/mtgox-payment-return-address.png') }}">
+</td><td>
+		<a href="{{ asset('bundles/hyperads/images/mtgox-payment-return-address.png') }}" class="fancybox" title="">
+		<img src="{{ asset('bundles/hyperads/images/mtgox-payment-return-address-M.png') }}">
+		</a>
 
+</td></tr><tr><td>
 		<p>Po zaakceptowaniu tego adresu, ekran powinien wyglądać następująco:</p>
 
-		<img src="{{ asset('bundles/hyperads/images/mtgox-payment-sending-address.png') }}">
+</td><td>
+		<a href="{{ asset('bundles/hyperads/images/mtgox-payment-sending-address.png') }}" class="fancybox" title="">
+		<img src="{{ asset('bundles/hyperads/images/mtgox-payment-sending-address-M.png') }}">
+		</a>
 
+</td></tr><tr><td>
 		<p>Widzimy teraz adres, na który mamy przelać bitcoiny, wpisujemy teraz do naszego konta w Bitcurex, zgodnie z poniższym obrazkiem:</p>
 
-		<img src="{{ asset('bundles/hyperads/images/bitcurex-adres-wyplat-bitcoin.png') }}">
+		<a href="{{ asset('bundles/hyperads/images/bitcurex-adres-wyplat-bitcoin.png') }}" class="fancybox" title="">
+		<img src="{{ asset('bundles/hyperads/images/bitcurex-adres-wyplat-bitcoin-M.png') }}">
+		</a>
 
+</td></tr><tr><td>
 		<p>Aby to uczynić, Bitcurex prześle nam mailem specjalny jednorazowy specjalny odnośnik, pod którym będziemy w stanie wpisać adres do przelewu. Wpisujemy go podobnie jak na obrazku poniżej:</p>  
 
-		<img src="{{ asset('bundles/hyperads/images/bitxurex-edycja-danych-konta-do-wyplat-btc.png') }}">
+</td><td>
+		<a href="{{ asset('bundles/hyperads/images/bitxurex-edycja-danych-konta-do-wyplat-btc.png') }}" class="fancybox" title="">
+		<img src="{{ asset('bundles/hyperads/images/bitxurex-edycja-danych-konta-do-wyplat-btc-M.png') }}">
+		</a>
 
+</td></tr><tr><td>
 		<p>Po edycji strony, ustawienia naszego konta będą wyglądały podobnie do obrazka poniżej:</p>
 
-		<img src="{{ asset('bundles/hyperads/images/bitxurex-dane-konta-do-wyplat-btc.png') }}">
+</td><td>
+		<a href="{{ asset('bundles/hyperads/images/bitxurex-dane-konta-do-wyplat-btc.png') }}" class="fancybox" title="">
+		<img src="{{ asset('bundles/hyperads/images/bitxurex-dane-konta-do-wyplat-btc-M.png') }}">
+		</a>
 
+</td></tr><tr><td>
 		<p>W tym momencie jesteśmy gotowi do przelania bitcoinów z naszego konta w Bitcurex do hyperreala. Bitcurex pobiera niewielką, symboliczną opłatę transakcyjną, która jest wymagana do sprawnego transferu bitcoinów: 0.005. Zlecenie wykonujemy zgodnie z obrazkiem poniżej, oczywiście wpisując tam wartość zgodną z opłatą za banner:</p>
 
-		<img src="{{ asset('bundles/hyperads/images/bitcurex-wyplata-btc.png') }}">
+</td><td>
+		<a href="{{ asset('bundles/hyperads/images/bitcurex-wyplata-btc.png') }}" class="fancybox" title="">
+		<img src="{{ asset('bundles/hyperads/images/bitcurex-wyplata-btc-M.png') }}">
+		</a>
 
+</td></tr><tr><td>
 		<p>Krótko (od minuty do kilkunastu minut) po przelaniu pieniędzy, po odświeżeniu przeglądarki (np. klawiszem F5), powinniśmy zobaczyć, że bitcoiny są w drodze:</p> 
 
-		<img src="{{ asset('bundles/hyperads/images/mtgox-payment-received-waiting-for-validation.png') }}">
+</td><td>
+		<a href="{{ asset('bundles/hyperads/images/mtgox-payment-received-waiting-for-validation.png') }}" class="fancybox" title="">
+		<img src="{{ asset('bundles/hyperads/images/mtgox-payment-received-waiting-for-validation-M.png') }}">
+		</a>
 
+</td></tr><tr><td>
 		<p>W tym momencie zaczyna się oczekiwanie na formalne potwierdzenie transakcji w sieci bitcoin, które trwa od kilkunastu minut do kilku godzin. Zależy to od czynników zewnętrznych, więc po prostu należy cierpliwie czekać. Gdy transakcja zostanie automatycznie potwierdzona, banner samoczynnie aktywuje się na hyperrealu zgodnie z naszym zamówieniem.</p>
 
 		<p>Jeśli nie znudziło ci się oczekiwanie, masz szanse zobaczyć ekran podobny do tego poniżej:</p>
 
-		<img src="{{ asset('bundles/hyperads/images/mtgox-payment-successful.png') }}">
+</td><td>
+		<a href="{{ asset('bundles/hyperads/images/mtgox-payment-successful.png') }}" class="fancybox" title="">
+		<img src="{{ asset('bundles/hyperads/images/mtgox-payment-successful-M.png') }}">
+		</a>
 
 		<p>To wszystko! Za drugim razem pójdzie ci znacznie szybciej i łatwiej, a za trzecim będziesz mistrzem bitcoinów :-)</p>
 
