--- a/src/Hyper/AdsBundle/Resources/views/Default/tutorial.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Default/tutorial.html.twig
@@ -8,7 +8,7 @@
         $('.fancybox').fancybox();
     });
 </script>
-
+<div id="tutorial">
 		<h1>Podręcznik obsługi serwisu reklamowego Hyperreal.Info</h1>
 
 		<p>Serwis reklamowy hyperreala o dźwięcznej i nieprzypadkowej nazwie <b>Acid</b>, jest w pełni samoobsługowym systemem do publikacji bannerów i ogłoszeń. Dokładamy najwyższych starań, aby jego obsługa była szybka, prosta i bezpieczna. System powstał specjalnie dla nas i został przygotowany przez jednego z członków społeczności hyperreala.<p>
@@ -213,6 +213,7 @@
 		</a>
 
 		<p>To wszystko! Za drugim razem pójdzie ci znacznie szybciej i łatwiej, a za trzecim będziesz mistrzem bitcoinów :-)</p>
+</div>
 
 {% endblock %}
 
