--- a/src/Hyper/AdsBundle/Resources/views/Default/tutorial.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Default/tutorial.html.twig
@@ -61,7 +61,7 @@
 		<img src="{{ asset('bundles/hyperads/images/mak-zarejestruj-M.png') }}">
 		</a>
 </td></tr><tr><td>
-		<p>Wypełnij wszystkie rubryki jak na obrazku poniżej, pamiętając, że adres mailowy będzie musiał zostać zweryfikowany. Po otrzymaniu maila po prostu kliknij w link potwierdzający i konto zostanie aktywowane. Jeśli nie otrzymałeś maila w ciągu maksymalnie kilku minut, sprawdź folder z spamem, gdyż mail mógł tam przypadkiem wylądować. Gdybyś w ogóle nie otrzymał maila, skontaktuj się z nami.</p>
+		<p>Wypełnij wszystkie rubryki jak na obrazku obok, pamiętając, że adres mailowy będzie musiał zostać zweryfikowany. Po otrzymaniu maila po prostu kliknij w link potwierdzający i konto zostanie aktywowane. Jeśli nie otrzymałeś maila w ciągu maksymalnie kilku minut, sprawdź folder z spamem, gdyż mail mógł tam przypadkiem wylądować. Gdybyś w ogóle nie otrzymał maila, skontaktuj się z nami.</p>
 </td><td>
 		<a href="{{ asset('bundles/hyperads/images/mak-rejestracja.png') }}" class="fancybox" title="">
 		<img src="{{ asset('bundles/hyperads/images/mak-rejestracja-M.png') }}">
@@ -93,7 +93,7 @@
 		<p>W momencie, w którym zdecydowałeś się na określony banner, sprawdź dokładnie jego maksymalny rozmiar. System zaakceptuje mniejszy banner niż podana wartość maksymalna bannera, ale nie zaakceptuje większego.</p>
 
 <table><tr><td>
-		<p>Kiedy masz już gotowy do publikacji banner, kliknij w odnośnik "Twoje bannery", a potem w "Dodaj banner". Wgraj banner do systemu zgodnie z przykładowym obrazkiem poniżej:</p>
+		<p>Kiedy masz już gotowy do publikacji banner, kliknij w odnośnik "Twoje bannery", a potem w "Dodaj banner". Wgraj banner do systemu zgodnie z przykładowym obrazkiem obok:</p>
 </td><td>
 		<a href="{{ asset('bundles/hyperads/images/mak-wgrywanie-bannera.png') }}" class="fancybox" title="">
 		<img src="{{ asset('bundles/hyperads/images/mak-wgrywanie-bannera-M.png') }}">
@@ -116,7 +116,7 @@
 		<h3>Opłacenie bannera</h3>
 
 <table><tr><td>
-		<p>Na obrazku poniżej widać listę stref, w których możesz aktywować swój banner. Aby to uczynić, kliknij w odnośnik "Opłać banner w tej strefie"</p>
+		<p>Na obrazku obok widać listę stref, w których możesz aktywować swój banner. Aby to uczynić, kliknij w odnośnik "Opłać banner w tej strefie"</p>
 </td><td>
 
 		<a href="{{ asset('bundles/hyperads/images/mak-strefy-dla-bannera.png') }}" class="fancybox" title="">
@@ -132,7 +132,7 @@
 		</a>
 
 </td></tr><tr><td>
-		<p>Zanim przejdziesz do transakcji, ustal swój adres zwrotny. Adres ten będzie użyty przez naszego pośrednika płatniczego, Mt.Gox, w dwóch wypadkach: a) gdybyś przelał więcej BTC niż wymaga to transakcja zakupu bannera, b) gdyby transakcja z rozmaitych powodów technicznych się nie powiodła. Dla przykładu, twój adres zwrotny w giełdzie Bitcurex, jest widoczny pod adresem <a href="https://pln.bitcurex.com/zasilenie-konta">https://pln.bitcurex.com/zasilenie-konta</a> - przykładowy adres jest widoczny na obrazku poniżej (oczywiście w swojej transakcji używaj własnego adresu, a nie przykładowego z obrazka!!):</p>
+		<p>Zanim przejdziesz do transakcji, ustal swój adres zwrotny. Adres ten będzie użyty przez naszego pośrednika płatniczego, Mt.Gox, w dwóch wypadkach: a) gdybyś przelał więcej BTC niż wymaga to transakcja zakupu bannera, b) gdyby transakcja z rozmaitych powodów technicznych się nie powiodła. Dla przykładu, twój adres zwrotny w giełdzie Bitcurex, jest widoczny pod adresem <a href="https://pln.bitcurex.com/zasilenie-konta">https://pln.bitcurex.com/zasilenie-konta</a> - przykładowy adres jest widoczny na obrazku onok (oczywiście w swojej transakcji używaj własnego adresu, a nie przykładowego z obrazka!!):</p>
 
 </td><td>
 		<a href="{{ asset('bundles/hyperads/images/bitcurex-adres-zwrotny.png/') }}" class="fancybox" title="">
@@ -140,7 +140,7 @@
 		</a>
 
 </td></tr><tr><td>
-		<p>Po ustaleniu adresu zwrotnego, możemy kontynuować płatność. Z adresu mak.hyperreal.biz przenosimy się do systemu płatności Mt.Gox, który pośredniczy w transakcji. Ekran będzie teraz wyglądał podobnie do tego poniżej. Widzimy na nim również dokładną wartość bitcoinów, które należy zapłacić za reklamę. Wybierasz opcję, że nie masz konta w Mt.Gox (chyba, że akurat masz, wtedy możesz oczywiście go użyć do tej płatności).</p>
+		<p>Po ustaleniu adresu zwrotnego, możemy kontynuować płatność. Z adresu mak.hyperreal.biz przenosimy się do systemu płatności Mt.Gox, który pośredniczy w transakcji. Ekran będzie teraz wyglądał podobnie do tego obok. Widzimy na nim również dokładną wartość bitcoinów, które należy zapłacić za reklamę. Wybierasz opcję, że nie masz konta w Mt.Gox (chyba, że akurat masz, wtedy możesz oczywiście go użyć do tej płatności).</p>
 
 </td><td>
 		<a href="{{ asset('bundles/hyperads/images/mtgox-payment-initial-screen.png') }}" class="fancybox" title="">
@@ -164,14 +164,15 @@
 		</a>
 
 </td></tr><tr><td>
-		<p>Widzimy teraz adres, na który mamy przelać bitcoiny, wpisujemy teraz do naszego konta w Bitcurex, zgodnie z poniższym obrazkiem:</p>
+		<p>Widzimy teraz adres, na który mamy przelać bitcoiny, wpisujemy teraz do naszego konta w Bitcurex, zgodnie z obrazkiem:</p>
+		</td><td>
 
 		<a href="{{ asset('bundles/hyperads/images/bitcurex-adres-wyplat-bitcoin.png') }}" class="fancybox" title="">
 		<img src="{{ asset('bundles/hyperads/images/bitcurex-adres-wyplat-bitcoin-M.png') }}">
 		</a>
 
 </td></tr><tr><td>
-		<p>Aby to uczynić, Bitcurex prześle nam mailem specjalny jednorazowy specjalny odnośnik, pod którym będziemy w stanie wpisać adres do przelewu. Wpisujemy go podobnie jak na obrazku poniżej:</p>  
+		<p>Aby to uczynić, Bitcurex prześle nam mailem specjalny jednorazowy specjalny odnośnik, pod którym będziemy w stanie wpisać adres do przelewu. Wpisujemy go podobnie jak na obrazku obok:</p>  
 
 </td><td>
 		<a href="{{ asset('bundles/hyperads/images/bitxurex-edycja-danych-konta-do-wyplat-btc.png') }}" class="fancybox" title="">
@@ -179,7 +180,7 @@
 		</a>
 
 </td></tr><tr><td>
-		<p>Po edycji strony, ustawienia naszego konta będą wyglądały podobnie do obrazka poniżej:</p>
+		<p>Po edycji strony, ustawienia naszego konta będą wyglądały podobnie do obrazka obok:</p>
 
 </td><td>
 		<a href="{{ asset('bundles/hyperads/images/bitxurex-dane-konta-do-wyplat-btc.png') }}" class="fancybox" title="">
@@ -187,7 +188,7 @@
 		</a>
 
 </td></tr><tr><td>
-		<p>W tym momencie jesteśmy gotowi do przelania bitcoinów z naszego konta w Bitcurex do hyperreala. Bitcurex pobiera niewielką, symboliczną opłatę transakcyjną, która jest wymagana do sprawnego transferu bitcoinów: 0.005. Zlecenie wykonujemy zgodnie z obrazkiem poniżej, oczywiście wpisując tam wartość zgodną z opłatą za banner:</p>
+		<p>W tym momencie jesteśmy gotowi do przelania bitcoinów z naszego konta w Bitcurex do hyperreala. Bitcurex pobiera niewielką, symboliczną opłatę transakcyjną, która jest wymagana do sprawnego transferu bitcoinów: 0.005. Zlecenie wykonujemy zgodnie z obrazkiem obok, oczywiście wpisując tam wartość zgodną z opłatą za banner:</p>
 
 </td><td>
 		<a href="{{ asset('bundles/hyperads/images/bitcurex-wyplata-btc.png') }}" class="fancybox" title="">
@@ -205,12 +206,13 @@
 </td></tr><tr><td>
 		<p>W tym momencie zaczyna się oczekiwanie na formalne potwierdzenie transakcji w sieci bitcoin, które trwa od kilkunastu minut do kilku godzin. Zależy to od czynników zewnętrznych, więc po prostu należy cierpliwie czekać. Gdy transakcja zostanie automatycznie potwierdzona, banner samoczynnie aktywuje się na hyperrealu zgodnie z naszym zamówieniem.</p>
 
-		<p>Jeśli nie znudziło ci się oczekiwanie, masz szanse zobaczyć ekran podobny do tego poniżej:</p>
+		<p>Jeśli nie znudziło ci się oczekiwanie, masz szanse zobaczyć ekran podobny do tego obok:</p>
 
 </td><td>
 		<a href="{{ asset('bundles/hyperads/images/mtgox-payment-successful.png') }}" class="fancybox" title="">
 		<img src="{{ asset('bundles/hyperads/images/mtgox-payment-successful-M.png') }}">
 		</a>
+</td></tr></table>
 
 		<p>To wszystko! Za drugim razem pójdzie ci znacznie szybciej i łatwiej, a za trzecim będziesz mistrzem bitcoinów :-)</p>
 </div>
