--- a/src/Hyper/AdsBundle/Resources/views/Default/tutorial.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Default/tutorial.html.twig
@@ -8,12 +8,14 @@
         $('.fancybox').fancybox();
     });
 </script>
-<div id="tutorial">
+
 		<h1>Podręcznik obsługi serwisu reklamowego Hyperreal.Info</h1>
 
 		<p>Serwis reklamowy hyperreala o dźwięcznej i nieprzypadkowej nazwie <b>Acid</b>, jest w pełni samoobsługowym systemem do publikacji bannerów i ogłoszeń. Dokładamy najwyższych starań, aby jego obsługa była szybka, prosta i bezpieczna. System powstał specjalnie dla nas i został przygotowany przez jednego z członków społeczności hyperreala.<p>
 
 		<p>W skrócie, publikacja reklamy na hyperrealu składa się z trzech etapów - zakupu bitcoinów (BTC), wgrania bannera i zapłacenia za niego zakupionymi wcześniej bitcoinami. Etapy te opisaliśmy w niniejszym podręczniku.</p>
+
+		<p>Aby zobaczyć obrazki w większej skali, kliknij w miniaturę.</p>
 
 		<h2>Bitcoiny</h2>
 
@@ -215,7 +217,6 @@
 </td></tr></table>
 
 		<p>To wszystko! Za drugim razem pójdzie ci znacznie szybciej i łatwiej, a za trzecim będziesz mistrzem bitcoinów :-)</p>
-</div>
 
 {% endblock %}
 
