--- a/src/Hyper/AdsBundle/Resources/public/css/main.css
+++ b/src/Hyper/AdsBundle/Resources/public/css/main.css
@@ -83,7 +83,7 @@ form div > ul {
     float: right;
 }
 
-#tutorial p, #tutorial u {
+#tutorial p, #tutorial ul {
 	font-family: 'Headland One', serif;
 }
 
