--- a/src/Hyper/AdsBundle/Resources/views/UserBanner/payInZone.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/UserBanner/payInZone.html.twig
@@ -16,7 +16,7 @@
     {{ form_widget(form) }}
     <div id="days-info" class="box hide span-5 left"></div>
     <div class="buttons">
-        <input type="submit" value="{{ 'next'|babel }}"/>
+        <input type="submit" class="title" value="{{ 'next'|babel }}"/>
     </div>
 </form>
 
