--- a/src/Hyper/AdsBundle/Resources/views/UserBanner/payInZoneSave.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/UserBanner/payInZoneSave.html.twig
@@ -15,7 +15,7 @@
 <form action="{{ url('user_banner_pay_in_zone_save', {'bannerId': banner.id, 'zoneId': zone.id}) }}" method="post">
     {{ form_widget(form) }}
     <div class="buttons">
-        <input type="submit" value="{{ 'next'|babel }}"/>
+        <input type="submit" class="title" value="{{ 'next'|babel }}"/>
     </div>
 </form>
 
