Allow to enable or disable banners by administrator

--- a/src/Hyper/AdsBundle/Resources/public/css/main.css
+++ b/src/Hyper/AdsBundle/Resources/public/css/main.css
@@ -95,3 +95,10 @@ form div > ul {
 #tutorial tbody tr:nth-child(2n) td {
     background: #FFF;
 }
+
+table label.table {
+    float: none;
+    margin-left: 9px;
+    font-weight: normal;
+    padding: 0;
+}
