--- a/src/Hyper/AdsBundle/Resources/views/BannerConfig/zone.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/BannerConfig/zone.html.twig
@@ -15,7 +15,7 @@
                     <th>{{ 'banner.title'|babel }}</th>
                     <th>{{ 'banner.size'|babel }}</th>
                     <th>{{ 'activated.by.user'|babel }}</th>
-                    <th>{{ 'use.in.zone'|babel }}</th>
+                    <th class="span-6">{{ 'use.in.zone'|babel }}</th>
                     <th>{{ 'probability'|babel }}</th>
                 </tr>
             </thead>
