--- a/src/Hyper/AdsBundle/Resources/views/BannerConfig/zone.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/BannerConfig/zone.html.twig
@@ -33,9 +33,9 @@
                     <td>
                         <label class="table" for="new-b-{{ banner.id }}-0">{{ 'user.decides'|babel|lower }}</label>
                         <input type="radio" name="newBanners[{{ banner.id }}]" value="0" id="new-b-{{ banner.id }}-0"{% if banner.id in usedBannerIds and reference.fixedByAdmin|number_format(1) == '0.0' %} checked="checked"{% endif %} />
-                        <label class="table" for="new-b-{{ banner.id }}-1">{{ 'yes'|babel|lower }}</label>
+                        <label class="table" for="new-b-{{ banner.id }}-1">{{ 'always'|babel|lower }}</label>
                         <input type="radio" name="newBanners[{{ banner.id }}]" value="1" id="new-b-{{ banner.id }}-1"{% if banner.id in usedBannerIds and reference.fixedByAdmin|number_format(1) == '1.0' %} checked="checked"{% endif %} />
-                        <label class="table" for="new-b-{{ banner.id }}-2">{{ 'no'|babel|lower }}</label>
+                        <label class="table" for="new-b-{{ banner.id }}-2">{{ 'never'|babel|lower }}</label>
                         <input type="radio" name="newBanners[{{ banner.id }}]" value="2" id="new-b-{{ banner.id }}-2"{% if banner.id in usedBannerIds and reference.fixedByAdmin|number_format(1) == '2.0' %} checked="checked"{% endif %} />
                     </td>
                     <td>
