--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,8 +5,6 @@
         <title>{% block title %}Welcome!{% endblock %} {{ page_title|babel }}</title>
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
-        <link rel="stylesheet" type="text/css" href="{{ asset('css/screen.css') }}" media="screen,projection" />
-        <link rel="stylesheet" type="text/css" href="{{ asset('css/print.css') }}" media="print" />
         <link rel="stylesheet" type="text/css" href="{{ asset('bundles/hyperads/css/main.css') }}" media="screen" />
 		<link href='http://fonts.googleapis.com/css?family=Headland+One&subset=latin-ext' rel='stylesheet' type='text/css'>
         <!--[if lt IE 8]>
@@ -18,9 +16,9 @@
     </head>
     <body>
 
-    <div class="container prepend-top">
-        <div id="header" class="clearfix">
-            <div id="login-bar" class="span-18">
+    <div class="container">
+        <div id="header" class="nav row">
+            <div id="login-bar" class="span4">
                 {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
                 <strong>{{ app.user.username }}</strong> |
                 <a href="{{ url('fos_user_profile_edit') }}">{{ 'edit.profile'|babel|lower }}</a> |
@@ -32,7 +30,7 @@
                 <a href="{{ path('fos_user_registration_register') }}">{{ 'layout.register'|trans({}, 'FOSUserBundle') }}</a>
                 {% endif %}
             </div>
-            <h1 id="logo" class="span-6 last">
+            <h1 id="logo" class="offset3 span4">
                 <div class="span-3">@acid</div>
                 <a href="{{ path('_welcome') }}" class="span-3 last">
                     <img src="{{ asset('bundles/hyperads/images/hyperreal.png') }}" alt="logo" />
@@ -40,72 +38,75 @@
             </h1>
         </div>
 
-        <aside class="span-4">
-            {% if is_granted('ROLE_ADMIN') %}
-            <menu class="admin">
-                <ul>
-                    <li>
-                        <a href="{{ path('admin_advertiser') }}">{{ 'advertisers'|babel }}</a>
-                    </li>
-                    <li>
-                        <a href="{{ path('admin_page') }}">{{ 'pages'|babel }}</a>
-                    </li>
-                    <li>
-                        <a href="{{ path('admin_zone') }}">{{ 'zones'|babel }}</a>
-                    </li>
+        <div class="row">
+            <aside class="span3">
+                <menu class="well sidebar-nav">
+                    <ul>
+                    {% if is_granted('ROLE_ADMIN') %}
+                        <li class="nav-header">Admin</li>
+                        <li>
+                            <a href="{{ path('admin_advertiser') }}">{{ 'advertisers'|babel }}</a>
+                        </li>
+                        <li>
+                            <a href="{{ path('admin_page') }}">{{ 'pages'|babel }}</a>
+                        </li>
+                        <li>
+                            <a href="{{ path('admin_zone') }}">{{ 'zones'|babel }}</a>
+                        </li>
 
-                    <li>
-                        <a href="{{ path('admin_banner') }}">{{ 'banners'|babel }}</a>
-                    </li>
+                        <li>
+                            <a href="{{ path('admin_banner') }}">{{ 'banners'|babel }}</a>
+                        </li>
+                        <li class="nav-header">User</li>
+                    {% endif %}
+                    {% if is_granted("ROLE_USER") %}
+                        <li>
+                            <a href="{{ url('acid_tutorial') }}">{{ 'tutorial'|babel }}</a>
+                        </li>
+                        <li>
+                            <a href="{{ path('user_banner_list') }}">{{ 'your.banners'|babel }}</a>
+                        </li>
+                        <li>
+                            <a href="{{ url("default_zones_info") }}">{{ 'zones.info'|babel }}</a>
+                        </li>
+                        <li>
+                            <a href="http://www.seethestats.com/site/hyperreal.info/STSd1bIizV7" target="_blank" class="external">{{ 'analytics.stats'|babel }}</a>
+                        </li>
+                    {% endif %}
+                    </ul>
+                </menu>
+            </aside>
 
-                </ul>
-            </menu>
-            {% endif %}
-            {% if is_granted("ROLE_USER") %}
-            <menu class="user">
-                <ul>
-                    <li>
-                        <a href="{{ url('acid_tutorial') }}">{{ 'tutorial'|babel }}</a>
-                    </li>
-                    <li>
-                        <a href="{{ path('user_banner_list') }}">{{ 'your.banners'|babel }}</a>
-                    </li>
-                    <li>
-                        <a href="{{ url("default_zones_info") }}">{{ 'zones.info'|babel }}</a>
-                    </li>
-                    <li>
-                        <a href="http://www.seethestats.com/site/hyperreal.info/STSd1bIizV7" target="_blank" class="external">{{ 'analytics.stats'|babel }}</a>
-                    </li>
-                </ul>
-            </menu>
-            {% endif %}
-        </aside>
+            <div class="row span9">
+                {% if app.session.hasFlash('error') %}
+                    <div class="error">
+                        {{ app.session.flash('error') }}
+                    </div>
+                {% endif %}
 
-        <div id="content" {% if is_granted("ROLE_USER") %}class="span-20 last"{% endif %}>
-            {% if app.session.hasFlash('error') %}
-            <div class="error">
-                {{ app.session.flash('error') }}
+                {% if app.session.hasFlash('notice') %}
+                    <div class="notice">
+                        {{ app.session.flash('notice') }}
+                    </div>
+                {% endif %}
+
+                {% if app.session.hasFlash('info') %}
+                    <div class="info">
+                        {{ app.session.flash('info') }}
+                    </div>
+                {% endif %}
+
+                {% if app.session.hasFlash('success') %}
+                    <div class="success">
+                        {{ app.session.flash('success') }}
+                    </div>
+                {% endif %}
+
+                {% block body %}{% endblock %}
             </div>
-            {% endif %}
-            {% if app.session.hasFlash('notice') %}
-            <div class="notice">
-                {{ app.session.flash('notice') }}
-            </div>
-            {% endif %}
-            {% if app.session.hasFlash('info') %}
-            <div class="info">
-                {{ app.session.flash('info') }}
-            </div>
-            {% endif %}
-            {% if app.session.hasFlash('success') %}
-            <div class="success">
-                {{ app.session.flash('success') }}
-            </div>
-            {% endif %}
-            {% block body %}{% endblock %}
         </div>
 
-        <div id="footer" class="span-24 prepend-top">
+        <div id="footer" class="row">
             {{ 'powered.by.acid'|babel }} <a href="https://github.com/hyperreal/AcidAdServer" class="github-fork">{{ 'fork.on.github'|babel }}</a>
         </div>
 
