--- a/src/Hyper/AdsBundle/Resources/views/UserBanner/list.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/UserBanner/list.html.twig
@@ -8,7 +8,7 @@
 <h1>{{ 'your.banners'|babel }}</h1>
 
 {% if banners|length > 0 %}
-<table class="records-list">
+<table class="table table-striped">
     <thead>
     <tr>
         <th>{{ 'id'|babel }}</th>
