--- a/src/Hyper/AdsBundle/Resources/views/UserBanner/payments.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/UserBanner/payments.html.twig
@@ -6,7 +6,7 @@
 <h2>{{ 'payments.for.announcement'|babel({'%announcement%': announcement.title}) }}</h2>
 
 {% if announcement.orders|length > 0 %}
-    <table class="records-list">
+    <table class="table table-striped">
         <thead>
         <tr>
             <th>{{ 'order.number'|babel }}</th>
