--- a/src/Hyper/AdsBundle/Resources/views/UserBanner/zones.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/UserBanner/zones.html.twig
@@ -10,7 +10,7 @@
 {% if zones|length > 0 %}
     <div class="info">Poniżej wyświetlono listę stref, do których pasuje wybrany banner.</div>
     <form action="{{ url('user_banner_zones_save', {'banner': banner.id }) }}" method="post">
-    <table class="records-list">
+    <table class="table table-striped">
         <thead>
         <tr>
             <th>{{ 'id'|babel }}</th>
