--- a/src/Hyper/AdsBundle/Resources/views/Banner/index.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Banner/index.html.twig
@@ -6,7 +6,7 @@
 <h1>{{ 'list.banner'|babel }}</h1>
 
 {% if entities|length > 0 %}
-<table class="records_list">
+<table class="table table-striped">
     <thead>
     <tr>
         <th>{{ 'id'|babel }}</th>
