--- a/src/Hyper/AdsBundle/Resources/views/UserAnnouncement/index.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/UserAnnouncement/index.html.twig
@@ -8,7 +8,7 @@
 <h1>{{ 'your.announcements'|babel }}</h1>
 
 {% if announcements|length > 0 %}
-<table class="records-list">
+<table class="table table-striped">
     <thead>
     <tr>
         <th>{{ 'id'|babel }}</th>
