--- a/src/Hyper/AdsBundle/Resources/public/less/main.less
+++ b/src/Hyper/AdsBundle/Resources/public/less/main.less
@@ -7,39 +7,44 @@ menu, ul.no-buttons {
     padding: 0;
 }
 
-form.user-form {
-    width: 450px;
-    margin: auto;
-    list-style: none;
-    background: #c3d9ff;
-    border: 1px solid #0088CC;
-    padding: 40px 0px;
-}
+form {
 
-form label{
-    float: left;
-    width: 150px;
-    text-align: right;
-    padding: 7px 5px 0 0;
-}
+    &.user-form {
+        width: 450px;
+        margin: auto;
+        list-style: none;
+        background: #c3d9ff;
+        border: 1px solid #0088CC;
+        padding: 40px 0px;
+    }
 
-form div {
-    clear: both;
-}
+    label {
+        float: left;
+        width: 150px;
+        text-align: right;
+        padding: 7px 5px 0 0;
+    }
 
-form#payment-form div#hyper_payment_form {
-    float: left;
-    width: 370px;
-}
+    div {
+        clear: both;
+    }
 
-form#payment-form div {
-    clear: none;
-}
+    &#payment-form {
+        div {
+            clear: none;
 
-form input[type="submit"], form button[type="submit"] {
-    position: relative;
-    float: right;
-    right: 88px;
+            &#hyper_payment_form {
+                float: left;
+                width: 370px;
+            }
+        }
+    }
+
+    input[type="submit"], button[type="submit"] {
+        position: relative;
+        float: right;
+        right: 88px;
+    }
 }
 
 ul form > button[type="submit"] {
@@ -48,8 +53,8 @@ ul form > button[type="submit"] {
 }
 
 .first-spanned-row > *:first-child, .last-zone > td, .first-spanned-row.first > td {
-                         border-bottom: 1px solid #92CAE4;
-                     }
+    border-bottom: 1px solid #92CAE4;
+}
 
 .spanned-column {
     background: #D5EDF8;
