--- a/src/Hyper/AdsBundle/Resources/public/less/global.less
+++ b/src/Hyper/AdsBundle/Resources/public/less/global.less
@@ -2,6 +2,10 @@ body {
     padding: 60px 0 20px 0;
 }
 
+body.grey {
+    background: #f5f5f5;
+}
+
 ul.no-buttons {
     list-style-type: none;
 }
@@ -38,17 +42,6 @@ form#payment-form div#hyper_payment_form {
 
 form#payment-form div {
     clear: none;
-}
-
-form input[type="submit"], form button[type="submit"] {
-    position: relative;
-    float: right;
-    right: 88px;
-}
-
-ul form > button[type="submit"] {
-    float: none;
-    position: static;
 }
 
 .first-spanned-row > *:first-child, .last-zone > td, .first-spanned-row.first > td {
@@ -108,4 +101,20 @@ table label.table {
     margin-left: 9px;
     font-weight: normal;
     padding: 0;
+}
+
+
+.form-signin {
+
+    .form-signin-heading {
+        margin-bottom: 10px;
+    }
+
+    background-color: #FFFFFF;
+    border: 1px solid #E5E5E5;
+    border-radius: 5px 5px 5px 5px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+    margin: 0 auto 20px;
+    max-width: 300px;
+    padding: 19px 29px 29px;
 }
