--- a/src/Hyper/AdsBundle/Resources/views/Default/index.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Default/index.html.twig
@@ -3,16 +3,8 @@
 {{ 'welcome'|babel }}
 {% endblock %}
 {% block body %}
-<div class="row span7 hero-unit">
-    <h1>Acid Ad Server</h1>
-    <blockquote>Many a small thing has been made large by the right kind of advertising.
-        <br/>
-        <small>Mark Twain</small>
-    </blockquote>
-    <p>
-        <a class="btn btn-primary btn-large" href="{{ url('acid_tutorial') }}">Dowiedz się więcej</a>
-    </p>
-</div>
+
+{% include "HyperAdsBundle:Default:heroUnit.html.twig" %}
 
 {% if is_granted("ROLE_USER") %}
     <div class="row">
