--- a/app/Resources/views/flashes.html.twig
+++ b/app/Resources/views/flashes.html.twig
@@ -1,23 +1,23 @@
-{% if app.session.hasFlash('error') %}
+{% for error in app.session.flashbag.get('error') %}
 <div class="error">
-    {{ app.session.flash('error') }}
+    {{ error }}
 </div>
-{% endif %}
+{% endfor %}
 
-{% if app.session.hasFlash('notice') %}
+{% for notice in app.session.flashbag.get('notice') %}
 <div class="notice">
-    {{ app.session.flash('notice') }}
+    {{ notice }}
 </div>
-{% endif %}
+{% endfor %}
 
-{% if app.session.hasFlash('info') %}
+{% for info in app.session.flashbag.get('info') %}
 <div class="info">
-    {{ app.session.flash('info') }}
+    {{ info }}
 </div>
-{% endif %}
+{% endfor %}
 
-{% if app.session.hasFlash('success') %}
+{% for success in app.session.flashbag.get('success') %}
 <div class="success">
-    {{ app.session.flash('success') }}
+    {{ success }}
 </div>
-{% endif %}
+{% endfor %}
